init(all): 기본 폰트 설정
- noto-sans kr로 기본 폰트 변경

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -9,8 +9,10 @@
     "airbnb-typescript",
     "prettier",
     "tslint:recommended",
+    // "eslint:recommended",
     "tslint-react",
-    "tslint-config-prettier"
+    "tslint-config-prettier",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
