feat(login): 로그인 페이지 퍼블리싱 (#2/#S09P12D211-593)
로그인 페이지 1단계(모바일) 퍼블리싱
- lint에러 수정
- colors.ts 파일 생성
- logo, git logo 이미지 추가
- images.ts 파일 생성

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,9 +8,8 @@
     // "airbnb/hooks",
     "airbnb-typescript",
     "prettier",
-    "tslint:recommended",
-    "tslint-react",
-    "tslint-config-prettier"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
