--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,9 +24,9 @@
   "rules": {
     "import/extensions": "error",
     "import/no-extraneous-dependencies": "error",
-    "import-name": false,
-    "interface-name": false,
-    "semicolon": [true, "always", "ignore-bound-class-methods"],
+    "import-name": "off",
+    "interface-name": "off",
+    "semicolon": ["off", "always", "ignore-bound-class-methods"],
     "variable-name": false,
     "object-literal-sort-keys": false,
     "interface-over-type-literal": false,
