feat(freeboard): 자유게시판 페이지 구현(#3/#S09P12D211-521)
자유게시판 페이지 1단계 퍼블리싱

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,10 +8,7 @@
     // "airbnb/hooks",
     "airbnb-typescript",
     "prettier",
-    "tslint:recommended",
-    // "eslint:recommended",
-    "tslint-react",
-    "tslint-config-prettier",
+    "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
