--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,30 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "immer": "^10.0.2",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.2",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
+    "rehype-raw": "^6.1.1",
+    "remark": "^14.0.3",
+    "remark-code-blocks": "^2.0.1",
+    "remark-emoji": "^3.1.2",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.4",
+    "swiper": "^10.0.4",
     "typescript": "^4.9.5",
+    "unist-util-visit": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
