--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.37",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.2",
+    "faker": "^6.6.6",
     "immer": "^10.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
