--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "immer": "^10.0.2",
@@ -20,6 +21,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
