--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,25 +12,26 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
-    "@types/react-datepicker": "^4.15.0",
     "@types/react-chartjs-2": "^2.5.7",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
     "chart.js": "^4.3.2",
+    "date-fns": "^2.30.0",
     "faker": "^6.6.6",
     "immer": "^10.0.2",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-code-blocks": "^0.1.2",
     "react-datepicker": "^4.16.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.2",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-spring-bottom-sheet": "^3.4.1",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
     "rehype-raw": "^6.1.1",
