--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "faker": "^6.6.6",
     "immer": "^10.0.2",
+    "lottie-react": "^2.4.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-code-blocks": "^0.1.2",
