--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@gorhom/bottom-sheet": "^4",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "@types/react-modal": "^3.16.0",
+    "@types/sockjs-client": "^1.5.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.2",
     "date-fns": "^2.30.0",
@@ -40,6 +42,7 @@
     "remark-code-blocks": "^2.0.1",
     "remark-emoji": "^3.1.2",
     "remark-gfm": "^3.0.1",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.0.4",
     "swiper": "^10.0.4",
     "typescript": "^4.9.5",
