chore(gm): develop 변경 사항 추가
develop 변경 사항 추가

--- a/backend/heulgit/src/main/resources/application-local.properties
+++ b/backend/heulgit/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
 #local Redis ??
 spring.profiles.active=local
-spring.profiles.redis.host=localhost
+spring.profiles.redis.host=i9d211.p.ssafy.io
 spring.profiles.redis.port=6379
