feat(notification): 알림 조회 API 구현 (#15/#S09P12D211-862) - 알림 조회를 위한 ResponseDto 생성 - Domain과 response를 Mapping하기 위한 mapper 추가 - 알림 조회를 위한 Service 로직 구현

--- a/backend/heulgit/build.gradle
+++ b/backend/heulgit/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 
     // @ConfigurationProperties 사용을 위함
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+    // S3 사용을 위함
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
