--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/chart.js": "^2.9.37",
+    "@types/event-source-polyfill": "^1.0.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
@@ -21,6 +22,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.2",
     "date-fns": "^2.30.0",
+    "event-source-polyfill": "^1.0.31",
     "faker": "^6.6.6",
     "immer": "^10.0.2",
     "lottie-react": "^2.4.0",
@@ -32,6 +34,7 @@
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-spring-bottom-sheet": "^3.4.1",
