--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-code-blocks": "^0.1.2",
     "react-datepicker": "^4.16.0",
     "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
