--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^7.1.0",
     "@gorhom/bottom-sheet": "^4",
     "@stomp/stompjs": "^7.0.0",
+    "@tanstack/react-query": "^4.32.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
