feat(heulgit): 댓글 입력시 멘션 기능 추가
- react-mentions 라이브러리 추가
- @입력 시 팔로우 한 사람들의 목록이 표시되도록 수정

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
+    "@types/react-mentions": "^4.1.8",
     "@types/react-modal": "^3.16.0",
     "@types/react-responsive": "^8.0.5",
     "@types/sockjs-client": "^1.5.1",
@@ -35,6 +36,7 @@
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.7",
+    "react-mentions": "^4.4.10",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
