--- a/backend/heulgit/build.gradle
+++ b/backend/heulgit/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.27'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
